# rugif

./: Cargo.toml  README.md  install.sh  rugif.desktop  rugif.service  uninstall.sh
assets/: gen_icon.py
crates/rugif-app/: Cargo.toml
crates/rugif-app/src/: main.rs  tray.rs
crates/rugif-capture/: Cargo.toml
crates/rugif-capture/src/: lib.rs  wayland.rs  x11.rs
crates/rugif-core/: Cargo.toml
crates/rugif-core/src/: config.rs  lib.rs
crates/rugif-encode/: Cargo.toml
crates/rugif-encode/src/: lib.rs
crates/rugif-ui/: Cargo.toml
crates/rugif-ui/src/: controls.rs  lib.rs  notification.rs  selection.rs  settings.rs  trim.rs
